--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Frontend/Healthsync/bun.lockb
 Backend/data/fard.json
 Backend/data/graph_data.json
 Backend/data/resources_backend.json
+Frontend/Healthsync/package-lock.json
