--- a/Frontend/Healthsync/package.json
+++ b/Frontend/Healthsync/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.8.2",
     "@radix-ui/react-icons": "^1.3.0",
     "d3": "^7.9.0",
     "react": "^18.3.1",
