--- a/Frontend/Healthsync/package.json
+++ b/Frontend/Healthsync/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview"
+    "start": "vite preview --port 3000"
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.8.2",
