--- a/Frontend/Healthsync/nixpacks.toml
+++ b/Frontend/Healthsync/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ['nodejs', 'bun']
 cmds = ['bun install']
 
 [phases.build]
-cmds = ['bun build']
+cmds = ['bun run build']
 
 [start]
 cmd = 'node node_modules/vite/bin/vite.js preview --host 0.0.0.0 --port $PORT'
